MFC r325067: bsnmpd: Only refresh devtree if devd event is a new or removed device.

It makes sense to refresh the tree only when a device is inserted or
removed, otherwise bsnmpd needlessly wastes lots of CPU.

PR:		209368

Former-commit-id: a0d76f32bb506619a2345ca461513f6769df7958